fix: removing align items

--- a/src/components/ItemCard/ItemCard.module.css
+++ b/src/components/ItemCard/ItemCard.module.css
@@ -6,7 +6,6 @@
 	width: 280px;
 	margin: 4px;
 	overflow: hidden;
-	align-items: center;
 	justify-self: center;
 }
 
